[tool.poetry]
name = "pypkgs_cz"
version = "0.1.0"
description = "Python package for DSCI 524 individual assignment 1"
authors = ["Chen Zhao <cz2020@student.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
